--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: FTA
 subtitle: Fundacion Turismo de Altura
 email: fundacionturismodealtura@gmail.com
 description: Somo una organización no gubernamental sin fines de lucro
-baseurl: "./" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
 street_address: 1234 Somewhere Road
